# stm32-bluepill-bare-metal

./: .gitignore  Makefile  compile_commands.json  core.S  cross-stm32-bluepill.txt  linker_script.ld  main.c  main.h  meson.build  project_utils.sh  startup_stm32f100xb.s  vector_table.S
.cache/clangd/index/: cmsis_compiler.h.04C633B8E8437838.idx  cmsis_gcc.h.80C6BC822C1A629D.idx  cmsis_version.h.61F497EEE73971CF.idx  core.S.1E7E39CF72E8E1E1.idx  core_cm3.h.42CE09F81ECC73C2.idx  main.c.822753377F1D6BBB.idx  main.h.AC4E2C35F3987C71.idx  stm32f100xb.h.8DC52706A7E78FFD.idx  system_stm32f1xx.h.566FB210B7F971F0.idx  vector_table.S.B6D9E4BA85F47AA0.idx
inc/: FreeRTOSConfig.h  gpio_driver.h  i2c_driver.h  i2c_lcd_driver.h  main.h  max6675_driver.h  spi_driver.h  sysclock.h  usart_driver.h  utils.h
src/: gpio_driver.c  i2c_driver.c  i2c_lcd_driver.c  main.c  max6675_driver.c  meson.build  spi_driver.c  sysclock.c  system_stm32f1xx.c  usart_driver.c  utils.c
