sources += files('main.c')
sources += files('utils.c')
sources += files('i2c_driver.c')
sources += files('spi_driver.c')
sources += files('gpio_driver.c')
sources += files('usart_driver.c')
sources += files('i2c_lcd_driver.c')
sources += files('max6675_driver.c')
sources += files('system_stm32f1xx.c')
